--- a/src/app/component/channels/channels.component.html
+++ b/src/app/component/channels/channels.component.html
@@ -1,1 +1,15 @@
-<p>channels works!</p>
+<div class="col-sm-3">
+    <div class="card">
+        <div class="card-header p-b-5">
+            <h5 class="card-title text-center"><i class="fa fa-random" aria-hidden="true"></i>Channels</h5>
+        </div>
+        <div class="list-group list-group-flush">
+          <a class="list-group-item list-group-item-action">Général
+          </a>
+          <a class="list-group-item list-group-item-action">Channel 1
+          </a>
+        </div>
+    </div>
+</div>
+
+
