--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -1,11 +1,13 @@
 nav {
-  margin: 27px auto 0;
+  margin: 27px auto 50px;
   position: relative;
   width:1500px;
-  height: 50px;
+  height: 100px;
   background-color: #f3f3f3;
   border-radius: 8px;
   font-size: 0;
+
+
 }
 
 body {
