--- a/src/app/component/messages/messages.component.html
+++ b/src/app/component/messages/messages.component.html
@@ -1,1 +1,20 @@
-<p>messages works!</p>
+<div class="col-sm-9">
+  <div class="row">
+    <article class="container">
+      <div class="card-header pb-0">
+        <h5 class="card-title "> Messages  => Alex  </h5>
+      </div>
+
+      <div class="">
+        <div class="panel panel-info">
+          <div class="panel-heading"></div>
+          <div class="panel-body">
+
+
+
+          </div>
+        </div>
+     </div>
+    </article>
+  </div>
+</div>
