aligner les btn

--- a/src/app/component/channels/channels.component.html
+++ b/src/app/component/channels/channels.component.html
@@ -8,6 +8,8 @@
         </div>
     </div>
     <div class="card">
+      <div class="one"></div>
+      <div class="two">
         <button type="button" class="btn btnChannel m-2" (click)="editChannel()">
             <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512">
                 <path
@@ -32,6 +34,8 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#3876BF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="16"></line><line x1="8" y1="12" x2="16" y2="12"></line></svg>
          Ajouter
         </button>
+
+        </div>
     </div>
 </div>
 
