--- a/src/app/component/channels/channels.component.scss
+++ b/src/app/component/channels/channels.component.scss
@@ -10,3 +10,15 @@ a:hover {
   background-color: #9BCDD2;
 }
 
+
+button {
+  font-family: Arial, Helvetica;
+  font-size: 16px;
+  padding: 10px;
+  background: #fff;
+  color: #000;
+  display: inline;
+  border: 0;
+  text-decoration: none;
+  line-height: 17px;
+}
