--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="col-lg-12 pt-2 d-flex align-items-center flex-column footerColor">
 <footer>
-        <p class="textcenter">Copyright &copy; Projet de Certification M2i - 22-12-2023 </p>
+        <h6 class="textcenter">Copyright &copy; Projet de Certification M2i <span> - 22/12/2023</span> </h6>
 </footer>
 </div>
