--- a/src/app/component/channels/channels.component.scss
+++ b/src/app/component/channels/channels.component.scss
@@ -4,18 +4,20 @@
 }
 
 a:hover {
-  background-color: #9BCDD2;
+  background-color: #A1CCD1;
 }
 .btnChannel{
-  background-color: #9BCDD2;
+  background-color: #f3f3f3;
 }
-
+.btnChannel:hover{
+  background-color: #A1CCD1;
+}
 
 button {
   font-family: Arial, Helvetica;
   font-size: 16px;
   padding: 10px;
-  background: #fff;
+  background: #A1CCD1;
   color: #000;
   display: inline;
   border: 0;
