--- a/src/app/component/messages/messages.component.html
+++ b/src/app/component/messages/messages.component.html
@@ -2,19 +2,25 @@
   <div class="row">
     <article class="container">
       <div class="card-header pb-0">
-        <h5 class="card-title "> Messages  => Alex  </h5>
+        <h5 class="card-title">Messages => Alex</h5>
       </div>
 
-      <div class="">
-        <div class="panel panel-info">
-          <div class="panel-heading"></div>
-          <div class="panel-body">
-
-
-
-          </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">Panel Head</div>
+        <div class="panel-body">
+          <app-messages-list></app-messages-list>
         </div>
-     </div>
+      </div>
     </article>
+  </div>
+
+  <div class="row">
+    <form (ngSubmit)="addMessageSubmit()">
+      <div class="text-box">
+        <label for="messageContent" class="m-3">Message :</label>
+        <input id="messageContent" type="text" name="contenu" [(ngModel)]="this.newMessage.contenu">
+        <button class="btn btn-primary" type="submit">Ajouter</button>
+      </div>
+    </form>
   </div>
 </div>
