minor update on the OnInit error display (not impacting the result in the browser)

--- a/src/app/component/messages/messages.component.html
+++ b/src/app/component/messages/messages.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <article class="container">
       <div class="card-header pb-0">
-        <h5 class="card-title">{{ this.channelService.currentChannel.nom}}</h5>
+        <h5 class="card-title">{{ currentChannel.nom}}</h5>
       </div>
 
       <div class="panel panel-info">
