--- a/src/app/component/channels/channels.component.scss
+++ b/src/app/component/channels/channels.component.scss
@@ -7,20 +7,143 @@ a:hover {
   background-color: #A1CCD1;
 }
 .btnChannel{
-  background-color: #f3f3f3;
+  background-color: #2FA4FF;
+  width: 110px;
 }
 .btnChannel:hover{
-  background-color: #A1CCD1;
+  background-color: #FFC600;
 }
 
 button {
   font-family: Arial, Helvetica;
   font-size: 16px;
   padding: 10px;
-  background: #A1CCD1;
-  color: #000;
+  background: #2FA4FF;
+  color: #000000;
   display: inline;
   border: 0;
   text-decoration: none;
   line-height: 17px;
 }
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
+
+*, *:after, *:before {
+	box-sizing: border-box;
+}
+
+:root {
+	font-size: 16px;
+}
+
+body {
+	font-family: "Inter", sans-serif;
+	line-height: 1.5;
+	min-height: 100vh;
+	font-size: 1.25rem;
+}
+
+*:focus {
+	outline: none;
+}
+
+body > div {
+	width: 90%;
+	max-width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 5rem;
+	margin-bottom: 5rem;
+}
+
+details div {
+	border-left: 2px solid #3876BF;
+	border-right: 2px solid #3876BF;
+	border-bottom: 2px solid #3876BF;
+	padding: 1.5em;
+}
+
+details div > * + * {
+	margin-top: 1.5em;
+}
+
+details + details {
+	margin-top: .5rem;
+}
+
+summary {
+	list-style: none;
+}
+
+summary::-webkit-details-marker {
+	display: none;
+}
+
+summary {
+	border: 2px solid #3876BF;
+	padding: .75em 1em;
+	cursor: pointer;
+	position: relative;
+	padding-left: calc(1.75rem + .75rem + .75rem);
+}
+
+summary:before {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: .75rem;
+	content: "↓";
+	width: 1.75rem;
+	height: 1.75rem;
+	background-color: #000;
+	color: #FFF;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	flex-shrink: 0;
+}
+
+details[open] summary {
+	background-color: #eee;
+}
+
+details[open] summary:before {
+	content: "↑";
+}
+
+summary:hover {
+	background-color: #A1CCD1;
+}
+
+a {
+	color: inherit;
+	font-weight: 600;
+	text-decoration: none;
+	box-shadow: 0 1px 0 0;
+}
+
+a:hover {
+	box-shadow: 0 3px 0 0;
+
+}
+
+code {
+	font-family: monospace;
+	font-weight: 600;
+}
+
+
+
+
+
+
+
+
+
+
+
+
