--- a/src/app/component/messages/messages.component.html
+++ b/src/app/component/messages/messages.component.html
@@ -2,13 +2,29 @@
   <div class="row">
     <article class="container">
       <div class="card-header pb-0">
-        <h5 class="card-title "> Messages  => Alex  </h5>
+        <h5 class="card-title "> <i class="fa fa-random m-1" aria-hidden="true">
+
+          <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" viewBox="0 0 24 24"
+               fill="none" stroke="#E7B10A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path>
+          </svg>
+
+            </i> Messages  => Alex  </h5>
       </div>
 
       <div class="">
         <div class="panel panel-info">
           <div class="panel-heading"></div>
           <div class="panel-body">
+
+
+
+
+
+
+
+
+
 
 
 
