--- a/src/app/component/channels/channels.component.html
+++ b/src/app/component/channels/channels.component.html
@@ -54,7 +54,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content container-fluid">
       <div class="modal-header">
-        <h4 class="modal-title" style="text-align: center">
+        <h4 class="modal-title text-center">
           <i class="fa fa-random" aria-hidden="true"></i>
           <svg xmlns="http://www.w3.org/2000/svg" height="20" width="25" viewBox="0 0 640 512">
             <path
@@ -66,7 +66,7 @@
       </div>
       <div class="modal-body">
         <article class="l-design-widht">
-            <p style="text-align: center; color: crimson;">Êtes-vous certain de supprimer le canal ? </p>
+            <p class="text-center text-danger">Êtes-vous certain de supprimer le canal ? </p>
         </article>
       </div>
       <div class="modal-footer  button-group">
@@ -91,7 +91,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content container-fluid">
       <div class="modal-header">
-        <h4 class="modal-title" style="text-align: center">  Ajouter un canal </h4>
+        <h4 class="modal-title text-center">  Ajouter un canal </h4>
       </div>
       <div class="modal-body">
         <form >
@@ -131,7 +131,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content container-fluid">
       <div class="modal-header">
-        <h4 class="modal-title" style="text-align: center">
+        <h4 class="modal-title text-center">
           <i class="fa fa-random" aria-hidden="true"></i>
           <svg xmlns="http://www.w3.org/2000/svg" height="20" width="25" viewBox="0 0 640 512">
             <path
