"major update : fetcher service + user +message component

--- a/src/app/component/messages/messages.component.html
+++ b/src/app/component/messages/messages.component.html
@@ -2,7 +2,9 @@
   <div class="row">
     <article class="container">
       <div class="card-header pb-0">
-        <h5 class="card-title "> <i class="fa fa-random m-1" aria-hidden="true">
+        
+        <h5 class="card-title "> 
+          <i class="fa fa-random m-1" aria-hidden="true">
 
           <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" viewBox="0 0 24 24"
                fill="none" stroke="#E7B10A" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -10,10 +12,9 @@
           </svg>
 
             </i> 
-          <ng-container *ngIf="currentChannel; else loading">
-            {{ currentChannel.nom }}
-          </ng-container>
-          <ng-template #loading>Loading...</ng-template>
+          
+            {{ this.channelService.currentChannel.nom}}
+          
         </h5>
       </div>
 
