add message aligned to the left if its idUser != currentUser.idUser

--- a/src/app/component/messages/messages.component.html
+++ b/src/app/component/messages/messages.component.html
@@ -14,6 +14,7 @@
             </i> 
           
             {{ this.channelService.currentChannel.nom}}
+          <!--   {{this.currentChannel.nom}} -->
           
         </h5>
       </div>
