--- a/src/app/component/messages-list/messages-list.component.html
+++ b/src/app/component/messages-list/messages-list.component.html
@@ -1,10 +1,14 @@
 <div class="messages-list">
-    <div *ngFor="let message of this.messagesService.messagesList" class="card mb-2" [ngClass]="{'align-right': message.id !== currentUserID, 'align-left': message.id === currentUserID}" class="card mb-3">
-        <span data-toggle="tooltip" data-placement="top" title="ID: {{message.id}}">
-            <p class="card-text m-3">{{message.contenu}}</p>
-            <p class="card-text m-3"><small class="text-muted">{{datePipe.transform(message.date, 'HH:mm dd-MM-yyyy')}}</small></p>
-            <span>{{message.idCanal}}</span>
-            <span>{{message.idUtilisateur}}</span>
-        </span>
+    <div *ngFor="let message of messagesService.messagesList" class="card mb-2"
+      [ngClass]="{'align-right': message.utilisateur.id === currentUserID, 'align-left': message.utilisateur.id !== currentUserID}">
+      <span data-toggle="tooltip" data-placement="top" title="ID: {{message.id}}">
+        <div class="card-body">
+          <p class="card-text m-3">{{message.contenu}}</p>
+          <p class="card-text m-3"><small class="text-muted">{{datePipe.transform(message.date, 'HH:mm dd-MM-yyyy')}}</small></p>
+          <span>ID Utilisateur: {{message.utilisateur.id}}</span>
+          <span>ID Utilisateur: {{currentUserID}}</span>
+        </div>
+      </span>
     </div>
-</div>
+  </div>
+  
