--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,10 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+*{
+    box-sizing: border-box;
+}
+html{
+    margin: 0;
+    overflow: hidden scroll;
+}
