--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,4 +1,24 @@
-<nav class=" mb-5 pt-0">
-  <p>header younes </p>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Projet de Certification M2i</a>
+    <div class="me-auto mb-2 mb-lg-0">
+      <span class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+      </span>
+      <span class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Admin</a>
+      </span>
+      <span class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Settings</a>
+      </span>
+
+      
+    </div>
+
+    
+
+    <p>header younes </p>
+
+  </div>
 </nav>
 
