--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -7,7 +7,18 @@ nav {
   border-radius: 8px;
   font-size: 0;
 
-
+  .nav-item{
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 100px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #000;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+  }
 }
 
 body {
