--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -3,9 +3,9 @@
     <a class="navbar-brand" href="#">Projet de Certification M2i</a>
     <div class="me-auto mb-2 mb-lg-0">
       <span class="nav-item">
-        <a class="nav-link active" aria-current="page" href="home">Home</a>
-      </span>
-      <span class="nav-item">
+        <div class="nav-item">
+          <a class="nav-link active" aria-current="page" href="home">Home</a>
+        </div>
         <a class="nav-link active" aria-current="page" href="admin">Admin</a>
       </span>
       <span class="nav-item">
@@ -14,10 +14,6 @@
 
       
     </div>
-
-    
-
-    <p>header younes </p>
 
   </div>
 </nav>
