--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,24 +1,34 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Projet de Certification M2i</a>
-    <div class="me-auto mb-2 mb-lg-0">
-      <span class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-      </span>
-      <span class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Admin</a>
-      </span>
-      <span class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Settings</a>
-      </span>
+<nav class=" mb-5 pt-0" style="margin-bottom: 50px;">
 
-      
-    </div>
+  <a [routerLinkActive]="'active'" [routerLink]="['/home']">Home</a>
+  <a [routerLink]="['/admin']" >Admin</a>
+  <a [routerLink]="['/login']">Déconnecter</a>
+  <a><img class="imgM2i" src="assets/images/m2i.jpg" alt="M2i Formation"/></a>
+  <div class="animation start-home"></div>
 
-    
-
-    <p>header younes </p>
-
-  </div>
 </nav>
+
+
+<!--<nav class="navbar navbar-expand-lg bg-body-tertiary">-->
+<!--  <div class="container-fluid">-->
+<!--    </nav>-->
+
+<!--    -->
+<!--    <a><img class="imgM2i" src="assets/images/m2i.jpg" alt="M2i Formation"/></a>-->
+<!--    <div class="me-auto mb-2 mb-lg-0">-->
+<!--      <span class="nav-item">-->
+<!--        <a [routerLinkActive]="'active'" [routerLink]="['/home']">Home</a>-->
+<!--      </span>-->
+<!--      <span class="nav-item">-->
+<!--        <a [routerLink]="['/admin']">Admin</a>-->
+<!--      </span>-->
+<!--      <span class="nav-item">-->
+<!--        <a class="nav-link active" aria-current="page" >Settings</a>-->
+<!--      </span>-->
+
+<!--    </div>-->
+
+
+<!--  </div>-->
+
 
