--- a/src/app/component/messages/messages.component.html
+++ b/src/app/component/messages/messages.component.html
@@ -11,11 +11,11 @@
             </svg>
           </i>
           <ng-container *ngIf="currentChannel; else loading">
-<!--            {{ currentChannel?.nom }}-->  a corriger
+<!--            {{ currentChannel?.nom }}-->
           </ng-container>
           <ng-template #loading>Loading...</ng-template>
 
-<!--          {{this.channelService?.currentChannel?.nom}}--> a corriger
+<!--          {{this.channelService?.currentChannel?.nom}}-->
         </h5>
 
 
